--- a/style.css
+++ b/style.css
@@ -611,6 +611,12 @@ body {
   #es-prada.es-prada .es-cross__container {
     max-width: 800px;
   }
+  #es-prada.es-prada .es-banner {
+    min-height: 180px;
+  }
+  #es-prada.es-prada .es-banner__image {
+    width: 30%;
+  }
 }
 @media screen and (min-width: 860px) {
   #es-prada.es-prada .es-cross__container {
@@ -702,7 +708,6 @@ body {
   #es-prada.es-prada .es-banner {
     padding-top: 50px;
     padding-bottom: 0;
-    min-height: 220px;
     margin-bottom: 34px;
   }
 }
