--- a/style.scss
+++ b/style.scss
@@ -181,15 +181,11 @@ body {
       display: block;
       margin: 0 auto;
       padding: 20px 35px;
-      max-width: 518px;
       font-family: $secondary;
-      font-weight: 400;
-      font-size: 18px;
-      letter-spacing: 0.1em;
-      text-transform: uppercase;
+      font-weight: 500;
+      font-size: 20px;
       text-align: center;
-      color: #fff;
-      background: $black;
+      color: $black;
       text-decoration: none;
       transition: all 0.3s ease;
     }
